--- a/colorswab/src/App.css
+++ b/colorswab/src/App.css
@@ -26,6 +26,8 @@
   z-index: 3;
   position: static;
   top: 0;
+  left: 0;
+  right: 0;
 }
 
 .Logo-container {
@@ -39,7 +41,7 @@
 }
 
 .Sidebar-container {
-  background-color: grey;
+  background-color: lightgrey;
   height: 100%;
   width: 320px;
   position: absolute;
@@ -51,6 +53,8 @@
   top: 100px;
   text-align: left;
   padding-left: 30px;
+  
+  filter: drop-shadow(0px 0px 2.5px black);
 }
 
 .Sidebar-color-selection {
@@ -76,7 +80,6 @@
 }
 
 .Color-grid-item-color {
-  
   height: 205px;
   border-radius: 15px 15px 0px 0px;
 }
@@ -89,6 +92,17 @@
   color: black;
   background-color: whitesmoke;
   border-radius: 0px 0px 15px 15px;
+}
+
+.Page-selection-container {
+  display: inline-block;
+  justify-content: center;
+  color: black;
+
+}
+
+.Page-selection {
+  margin-left: 20px;
 }
 
 .logo {
