--- a/colorswab/src/App.css
+++ b/colorswab/src/App.css
@@ -103,6 +103,13 @@
 
 .Page-selection {
   margin-left: 20px;
+  color: black;
+  text-decoration: none;
+}
+
+.Page-selection-chosen {
+  margin-left: 20px;
+  color: black;
 }
 
 .logo {
