--- a/colorswab/src/App.css
+++ b/colorswab/src/App.css
@@ -24,10 +24,10 @@
   height: 100px;
   width: 100%;
   z-index: 3;
-  position: static;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 .Logo-container {
@@ -52,14 +52,35 @@
   padding-top: 20px;
   top: 100px;
   text-align: left;
-  padding-left: 30px;
+
   
   filter: drop-shadow(0px 0px 2.5px black);
 }
 
 .Sidebar-color-selection {
+  padding-left: 30px;
   color: black;
   text-decoration: none;
+  margin: 15px 0px 15px 0px;
+}
+
+.Sidebar-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: drop-shadow(0px 0px 2.5px black);
+
+}
+
+.Sidebar-button {
+  margin: 50px 0px 40px 0px;
+  padding: 10px 40px 10px 40px;
+  color: black;
+  background-color: white;
+  font-weight: bold;
+  border-radius: 10px 10px 10px 10px;
+  font-size: 30px;
+
 }
 
 .Color-grid-container {
