--- a/colorswab/src/App.css
+++ b/colorswab/src/App.css
@@ -81,18 +81,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  filter: drop-shadow(0px 0px 2.5px black);
+  filter: drop-shadow(0px 0px .5px black);
 
 }
 
 .Sidebar-button {
   margin: 50px 0px 40px 0px;
-  padding: 10px 40px 10px 40px;
+  padding: 15px 40px 15px 40px;
   color: black;
   background-color: white;
-  font-weight: bold;
+  font-weight: 600;
   border-radius: 10px 10px 10px 10px;
   font-size: 30px;
+  font-family: 'Source Serif Pro', serif;
 
 }
 
@@ -159,4 +160,67 @@
   mask: url(./logo-symbol.svg) no-repeat center;
   height: 900px;
   width: 300px;
+}
+
+.Detail-view-container {
+  max-width: 600px;
+  max-height: 800px;
+
+}
+
+.Detail-view-big-color-container {
+  filter: drop-shadow(0px 0px 2.5px grey);
+  margin: 0px 10px 80px 5vh;
+
+}
+
+.Detail-view-big-color {
+  height: 50vh;
+  width: 70vh;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.Detail-view-big-color-name {
+  text-align: left;
+  font-size: 5vh;
+  height: 10vh;
+  width: 70vh;
+  color: black;
+  background-color: whitesmoke;
+  border-radius: 0px 0px 15px 15px;
+  padding-left: 0px;
+  padding-top: 5vh;
+  
+}
+
+.Detail-view-other-color-container-container {
+  display: grid;
+  grid-template-columns: 220px 220px 220px 220px 220px;
+  grid-template-rows: 0px;
+  grid-gap: 10px;
+  grid-row-gap: 10px;
+  margin: 5vh 10px 0px 0vh;
+}
+
+.Detail-view-other-color-container {
+  filter: drop-shadow(0px 0px 2.5px grey);
+
+}
+
+.Detail-view-other-color {
+  height: 10vh;
+  width: 15vh;
+  border-radius: 15px 15px 0px 0px;
+
+}
+
+.Detail-view-other-color-name {
+  text-align: left;
+  font-size: 30px;
+  height: 5vh;
+  width: 15vh;
+  color: black;
+  background-color: whitesmoke;
+  border-radius: 0px 0px 15px 15px;
+  
 }
