--- a/colorswab/src/App.css
+++ b/colorswab/src/App.css
@@ -169,13 +169,18 @@
 }
 
 .Detail-view-big-color-container {
-  filter: drop-shadow(0px 0px 2.5px grey);
-  margin: 0px 10px 80px 5vh;
+  filter: drop-shadow(0px 0px 2.5px black);
+  margin: 0px 0px 0px 0vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 
 }
 
 .Detail-view-big-color {
-  height: 50vh;
+  height: 40vh;
   width: 70vh;
   border-radius: 15px 15px 0px 0px;
 }
@@ -183,28 +188,32 @@
 .Detail-view-big-color-name {
   text-align: left;
   font-size: 5vh;
-  height: 10vh;
+  height: 8vh;
   width: 70vh;
   color: black;
   background-color: whitesmoke;
   border-radius: 0px 0px 15px 15px;
   padding-left: 0px;
-  padding-top: 5vh;
+  padding-top: 3vh;
   
 }
 
+.Detail-view-big-color-text {
+  padding-left: 20px;
+}
+
 .Detail-view-other-color-container-container {
-  display: grid;
-  grid-template-columns: 220px 220px 220px 220px 220px;
-  grid-template-rows: 0px;
-  grid-gap: 10px;
-  grid-row-gap: 10px;
-  margin: 5vh 10px 0px 0vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  margin: 5vh 10px 30px 0vh;
 }
 
 .Detail-view-other-color-container {
-  filter: drop-shadow(0px 0px 2.5px grey);
-
+  filter: drop-shadow(0px 0px 1.5px black);
+  padding: 0px 10px 0px 30px;
 }
 
 .Detail-view-other-color {
@@ -217,10 +226,25 @@
 .Detail-view-other-color-name {
   text-align: left;
   font-size: 30px;
-  height: 5vh;
+  height: 4vh;
   width: 15vh;
   color: black;
   background-color: whitesmoke;
   border-radius: 0px 0px 15px 15px;
   
+}
+
+.Detail-view-clear-button-container {
+
+}
+
+.Detail-view-clear-button {
+  filter: drop-shadow(0px 0px 1px black);
+  font-weight: 600;
+  border-radius: 10px 10px 10px 10px;
+  font-size: 30px;
+  font-family: 'Source Serif Pro', serif;
+  padding: 10px 100px 10px 100px;
+  background-color: white;;
+  font-size: calc(10px + 2vmin);
 }
